--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,7 @@ section .title::before {
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
-    margin-top: 20px;
+    margin: 20px 20px 0 0;
     font-weight: 400;
     border-radius: 6px;
     border: 2px solid crimson;
@@ -343,6 +343,7 @@ section .title::before {
 
 /*House all the cards*/
 .work-container {
+    display:grid;
     grid-template-columns: repeat(3, 330px);
     gap: 1.8rem;
     justify-content: center;
@@ -853,9 +854,5 @@ footer {
     #myCanvas {
         width: 250px;
         height: 250px;
-    }
-
-    .portfolio-popup-info{
-       
     }
 }
